src/objects/Points__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Points__c</fullName>
        <label>Number of Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Source_Record__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Source_Record_Id__c)),
  HYPERLINK(&apos;/&apos; + Source_Record_Id__c, &apos;View&apos;, &apos;_blank&apos;),
  null
)</formula>
        <label>Open Source Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Points Rule</label>
        <referenceTo>Points_Rule__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <label>Source Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Points</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Points_Rule__c</columns>
        <columns>Number_of_Points__c</columns>
        <columns>Source_Record_Id__c</columns>
        <columns>Open_Source_Record__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Points Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>